# job-interview-from-hell

./: README.md  pyproject.toml  pyrightconfig.json
src/interview_hell/: main.py  questions.json
